# astrec

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
arec/: manage.py  registry_template.xlsx
arec/approval/: models.py
arec/approval/migrations/: 0001_initial.py  0002_approval_remark.py  0003_approval_card.py  0004_alter_approval_parent.py  0005_rename_card_approval_card_ref.py  0006_approval_approving_position.py
arec/arec/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
arec/card/: admin.py  filters.py  forms.py  mappings.py  models.py  tasks.py  utils.py  views.py
arec/card/migrations/: 0001_initial.py  0002_docscan_card_files.py  0003_alter_card_options.py  0004_remove_card_files_docscan_card_alter_docscan_doctype.py  0005_cardindividual_cardlegalentity_and_more.py  0006_rename_object_category_card_object_category_and_more.py  0007_alter_card_individual_entity_alter_card_legal_entity.py  0008_alter_card_individual_entity_alter_card_legal_entity.py  0009_alter_card_individual_entity.py  0010_alter_card_individual_entity.py  0011_card_iin_alter_card_object_category_alter_card_task.py  0012_alter_card_iin.py  0013_alter_card_iin.py  0014_card_city.py  0015_alter_card_object_category_alter_card_task.py  (+23 more)
arec/environments/: demo.env
arec/users/: forms.py  models.py  urls.py  views.py
card_approval/: manage.py
card_approval/card_approval/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
project_tracking/: manage.py
project_tracking/project_tracking/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+28 files in other folders)
