[tool.poetry]
name = "arec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "arec"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-widget-tweaks = "^1.4.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
