[tool.poetry]
name = "arec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "arec"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-widget-tweaks = "^1.4.12"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
